--- a/NumberGuessingGame/app/src/main/res/values/colors.xml
+++ b/NumberGuessingGame/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="red">#FFF43636</color>
+    <color name="gray">#757575</color>
+    <color name="brown">#FFF0EAE2</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
